--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "json5": "^2.2.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@types/dotenv": "^6.1.1",
+    "@types/node": "^24.3.1",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
