--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/index.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,10 +15,12 @@
   "type": "commonjs",
   "dependencies": {
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "json5": "^2.2.3"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.21",
     "@types/node": "^24.3.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
